--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,31 @@
 @font-face {
-    font-family: 'gilroy';
-    src: url('../fonts/gilroyextra.woff2') format('woff2'),
-         url('../fonts/gilroyextra.woff') format('woff');
+    font-family: "gilroy";
+    src: url("../fonts/gilroyextra.woff2") format("woff2"),
+         url("../fonts/gilroyextra.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'gilroy';
-    src: url('../fonts/gilroyextrabold.woff2') format('woff2'),
-         url('../fonts/gilroyextrabold.woff') format('woff');
+    font-family: "gilroy";
+    src: url("../fonts/gilroyextrabold.woff2") format("woff2"),
+         url("../fonts/gilroyextrabold.woff") format("woff");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'opensans';
-    src: url('../fonts/opensans.woff2') format('woff2'),
-         url('../fonts/opensans.woff') format('woff');
+    font-family: "opensans";
+    src: url("../fonts/opensans.woff2") format("woff2"),
+         url("../fonts/opensans.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'opensans';
-    src: url('../fonts/opensansbold.woff2') format('woff2'),
-         url('../fonts/opensansbold.woff') format('woff');
+    font-family: "opensans";
+    src: url("../fonts/opensansbold.woff2") format("woff2"),
+         url("../fonts/opensansbold.woff") format("woff");
     font-weight: bold;
     font-style: normal;
 }
@@ -34,7 +34,7 @@ body {
     min-width: 1200px;
     margin: 0;
 
-    font-family: 'gilroy', "Arial", sans-serif;
+    font-family: "gilroy", "Arial", sans-serif;
     font-size: 18px;
     line-height: 24px;
     font-weight: bold;
@@ -42,8 +42,8 @@ body {
 }
 
 .container {
-    width: 1200px;
-    padding: 0 40px;
+    width: 1160px;
+    padding: 0 20px;
     margin: 0 auto;
 }
 
@@ -77,13 +77,43 @@ img {
 }
 
 .button {
+    position: relative;
+
     display: block;
 
+    min-width: 200px;
+    height: 40px;
+    padding: 0 43px;
+    padding-top: 8px;
+    box-sizing: border-box;
+
     text-transform: uppercase;
+    line-height: 24px;
     letter-spacing: 0.2em;
+    color: #000000;
+}
+
+.button::before {
+    content: "";
+
+    position: absolute;
+    top: 16px;
+    left: 0;
+
+    width: 100%;
+    height: 8px;
 
     background-color: #f0c52e;
-    color: #000000;
+
+    z-index: -1;
+    transition-duration: 0.5s;
+}
+
+.button:hover::before,
+.button:focus::before {
+    top: 0;
+    height: 100%;
+    transition-duration: 0.5s;
 }
 
 .button:active {
@@ -95,15 +125,16 @@ img {
 .main-header {
     display: flex;
     flex-direction: column;
-    padding: 0 60px;
-    width: 1160px;
     box-sizing: border-box;
+    padding: 0 60px;
+    min-height: 226px;
 
+    background-image: linear-gradient(to bottom, white 40px, #f7e296 40px);
     background-color: #f7e296;
 }
 
 .main-header a {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 30px;
@@ -115,8 +146,8 @@ img {
 }
 
 .main-logo {
-    margin-top: 20px;
-    margin-bottom: 35px;
+    margin-top: 21px;
+    margin-bottom: 17px;
 }
 
 .logo:hover,
@@ -146,6 +177,8 @@ img {
 }
 
 .form-search {
+    position: relative;
+
     width: 440px;
     min-height: 40px;
 }
@@ -154,10 +187,24 @@ img {
     display: flex;
 }
 
-.form-search input[type="search"] {
-    padding-left: 40px;
+.form-search::before {
+    content: "";
 
-    font-family: 'opensans', "Arial", sans-serif;
+    position: absolute;
+    top: 9px;
+    left: 4px;
+
+    width: 16px;
+    height: 16px;
+
+    background-image: url("../img/search.svg");
+    background-repeat: no-repeat;
+}
+
+.form-search input[type="search"] {
+    padding-left: 20px;
+
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 30px;
@@ -210,14 +257,101 @@ img {
 
 .authorization-container {
     display: flex;
+    justify-content: flex-end;
 }
 
-.authorization {
-    padding-left: 28px;
-    margin-right: 210px;
+.main-menu .authorization-header {
+    position: relative;
+    box-sizing: border-box;
+    padding-left: 31px;
+    display: flex;
+    width: 290px;
+}
+
+.user-name {
+    margin-right: 20px;
+}
+
+.main-menu .compare {
+    position: relative;
+
+    width: 100px;
+}
+
+.compare a {
+    margin-left: 3px;
+}
+
+.main-menu .basket {
+    position: relative;
+
+    width: 75px;
+}
+
+.basket a {
+    margin-left: 15px;
+}
+
+.authorization-header::before {
+    content: "";
+
+    position: absolute;
+    top: 10px;
+    left: 5px;
+
+    width: 13px;
+    height: 12px;
+
+    background-image: url("../img/user.svg");
+    background-repeat: no-repeat;
+}
+
+.compare a::before {
+    content: "";
+
+    position: absolute;
+    top: 12px;
+    left: 2px;
+
+    width: 10px;
+    height: 10px;
+
+    background-image: url("../img/compare.svg");
+    background-repeat: no-repeat;
+}
+
+.basket a::before {
+    content: "";
+
+    position: absolute;
+    top: 10px;
+    left: 12px;
+
+    width: 12px;
+    height: 12px;
+
+    background-image: url("../img/cart.svg");
+    background-repeat: no-repeat;
+}
+
+.authorization-header:hover::before,
+.authorization-header:focus::before,
+.compare:hover::before,
+.compare:focus::before,
+.basket:hover::before,
+.basket:focus::before {
+    opacity: 0.6;
+}
+
+.authorization:active::before,
+.compare:active::before,
+.basket:active::before {
+    opacity: 0.3;
 }
 
 .main-nav {
+    position: relative;
+
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -234,9 +368,49 @@ img {
 }
 
 .main-nav h2 {
+    position: relative;
+
     width: 300px;
     margin: 0;
     margin-right: 240px;
+    margin-bottom: 24px;
+
+    z-index: 3;
+}
+
+.main-nav h2::after {
+    content: "";
+
+    position: absolute;
+    top: 11px;
+    right: 54px;
+
+    width: 16px;
+    height: 2px;
+
+    background-color: #b9a974;
+}
+
+.main-nav h2::before {
+    content: "";
+
+    position: absolute;
+    top: 4px;
+    right: 61px;
+
+    width: 2px;
+    height: 16px;
+
+    background-color: #b9a974;
+}
+
+.main-nav h2:hover,
+.main-nav h2:focus {
+    opacity: 0.6;
+}
+
+.main-nav h2:active {
+    opacity: 0.3;
 }
 
 .main-nav ul {
@@ -249,36 +423,67 @@ img {
 .header-service {
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
     width: 500px;
+
+    z-index: 3;
 }
 
-.header-service li:nth-child(1),
-.header-service li:nth-child(2) {
-    margin-right: 30px;
+.header-service li:nth-child(1) {
+    margin-right: 35px;
 }
 
 .header-service li:nth-child(3) {
     margin-left: auto;
+    margin-right: -4px;
 }
 
 .main-nav .header-cotalog {
     display: flex;
-    flex-wrap: wrap;
-    width: 750px;
-    margin-left: -40px;
+    margin: 0;
+    padding: 0;
+    width: 720px;
+
+    z-index: 1;
 }
 
-.header-cotalog li {
-    width: 200px;
-    margin-bottom: 15px;
-    margin-left: 40px;
+.header-cotalog li:first-child {
+    margin-right: 54px
+}
+
+.header-cotalog li:nth-child(2) {
+    margin-right: 74px
+}
+
+.header-cotalog a {
+    display: block;
+    margin-bottom: 6px;
 }
 
 .cotalog-container {
+    position: absolute;
+    top: 3px;
+    left: -60px;
+
+    box-sizing: border-box;
+    width: 1160px;
+    padding-top: 45px;
+    padding-left: 60px;
+    padding-bottom: 32px;
+
     display: none;
+    background-color: #f7e296;
+
+    z-index: 5;
 }
 
 .cotalog-show {
+    display: block;
+}
+
+.main-nav h2:hover + .header-service + .cotalog-container,
+.cotalog-container:hover {
     display: block;
 }
 
@@ -286,38 +491,236 @@ img {
 
 /*slider*/
 
+.slider {
+    position: relative;
+}
+
+.slides-button-list {
+    position: absolute;
+    bottom: 162px;
+    right: 102px;
+
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    width: 80px;
+
+    list-style: none;
+}
+
+.slides-button-list .slide-button {
+    display: block;
+    width: 11px;
+    height: 11px;
+
+    border: 1px solid #000000;
+    border-radius: 50%;
+}
+
 .main .slider-list {
-    margin-top: 0;
-    margin-bottom: 115px;
+    position: relative;
+
+    padding: 0 20px;
+    margin-top: -33px;
+    margin-bottom: 90px;
     box-sizing: border-box;
 
     list-style: none;
 }
 
-.offers {
+.slider-list::before {
+    content: "";
+
+    position: absolute;
+    top: 72px;
+    left: 600px;
+
+    width: 100px;
+    height: 7px;
+
+    background-color: #ffffff;
+    z-index: 1;
+}
+
+.slider-item .offers {
+    position: relative;
+
     display: flex;
 }
 
 .offers img {
-    margin-left: 80px;
-    margin-right: 120px
+    margin-top: 35px;
+    margin-left: 70px;
+    margin-right: 120px;
+
+    z-index: 1;
 }
 
-.sider-item {
+.slider-monopod img {
+    height: 486px;
+    width: 384px;
+}
+
+.slider-smartWatch img {
+    margin-left: 95px;
+    margin-top: 47px;
+    margin-right: 135px;
+}
+
+.slider-drons img {
+    width: 526px;
+    height: 334px;
+    margin-left: 11px;
+    margin-top: 100px;
+    margin-right: 37px;
+}
+
+.slider-item .offers::before {
+    content: "";
+
+    position: absolute;
+    top: 16px;
+    left: -20px;
+
+    width: 1160px;
+    height: 130px;
+
+    background-color: #f7e296;
+
+    z-index: 1;
+}
+
+.slider-monopod .offers::after {
+    content: "01";
+
+    position: absolute;
+    top: 20px;
+    right: 26px;
+
+    font-size: 179px;
+    font-weight: bold;
+    line-height: 180px;
+    letter-spacing: 0.01em;
+    color: #ffffff;
+
+    z-index: 1;
+}
+
+.slider-smartWatch .offers::after {
+    content: "02";
+
+    position: absolute;
+    top: 20px;
+    right: 27px;
+
+    font-size: 179px;
+    font-weight: bold;
+    line-height: 180px;
+    letter-spacing: 0.01em;
+    color: #ffffff;
+
+    z-index: 1;
+}
+
+.slider-drons .offers::after {
+    content: "03";
+
+    position: absolute;
+    top: 20px;
+    right: 28px;
+
+    font-size: 179px;
+    font-weight: bold;
+    line-height: 180px;
+    letter-spacing: 0.01em;
+    color: #ffffff;
+
+    z-index: 1;
+}
+
+.slider-item {
+    position: relative;
     display: none;
 }
 
-.slider-container {
-    width: 500px;
+.slider-monopod::after {
+    content: "";
+
+    position: absolute;
+    bottom: 165px;
+    right: 132px;
+
+    width: 5px;
+    height: 5px;
+
+    border: 1px solid #000000;
+    border-radius: 50%;
 }
 
-.slider-list b {
+.slider-smartWatch::after {
+    content: "";
+
+    position: absolute;
+    bottom: 165px;
+    right: 99px;
+
+    width: 5px;
+    height: 5px;
+
+    border: 1px solid #000000;
+    border-radius: 50%;
+}
+
+.slider-drons::after {
+    content: "";
+
+    position: absolute;
+    bottom: 165px;
+    right: 65px;
+
+    width: 5px;
+    height: 5px;
+
+    border: 1px solid #000000;
+    border-radius: 50%;
+}
+
+.slider-container {
+    position: relative;
+
+    width: 500px;
+
+    z-index: 2;
+}
+
+.slider-item b {
+    display: block;
+    box-sizing: border-box;
+    padding-left: 5px;
+    padding-right: 98px;
+    margin-bottom: 19px;
+    margin-top: 114px;
+
     font-size: 47px;
     line-height: 56px;
+    letter-spacing: 0.01em;
+}
+
+.slider-smartWatch b {
+    padding-right: 98px;
+}
+
+.slider-drons b {
+    width: 510px;
+    padding-right: 0px;
 }
 
 .slider-list p {
-    font-family: 'opensans', "Arial", sans-serif;
+    padding-left: 5px;
+    margin-bottom: 43px;
+
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 30px;
@@ -326,8 +729,22 @@ img {
     background-color: #ffffff;
 }
 
+.slider-item .button {
+    width: 220px;
+    padding-left: 44px;
+    padding-right: 44px;
+    margin-left: 5px;
+    margin-bottom: 71px;
+}
+
+.table-slider {
+    width: 460px;
+
+    outline: 1px solid red;
+}
+
 .table-slider th {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 13px;
     font-weight: 300;
     line-height: 20px;
@@ -352,6 +769,7 @@ img {
 }
 
 .index-cotalog-list a {
+    display: block;
     color: #000000;
 }
 
@@ -363,86 +781,90 @@ img {
 .icon-container {
     position: relative;
     height: 160px;
-    margin-bottom: 35px;
+    margin-bottom: 33px;
 
     background-color: #f7e296;
+}
+
+.cotalog-monopods p {
+    padding-right: 50px;
 }
 
 .cotalog-vr .icon-container::before {
     position: absolute;
     content: "";
-    top: 25%;
-    left: 25%;
+    top: 52px;
+    left: 31px;
 
     width: 97px;
     height: 55px;
 
-    background-image: url('../img/popular-1.svg');
+    background-image: url("../img/popular-1.svg");
     background-repeat: no-repeat;
 }
 
 .cotalog-monopods .icon-container::before {
     position: absolute;
     content: "";
-    top: 25%;
-    left: 25%;
+    top: 41px;
+    left: 38px;
 
     width: 86px;
     height: 117px;
 
-    background-image: url('../img/popular-2.svg');
+    background-image: url("../img/popular-2.svg");
     background-repeat: no-repeat;
 }
 
 .cotalog-camera .icon-container::before {
     position: absolute;
     content: "";
-    top: 25%;
-    left: 25%;
+    top: 38px;
+    left: 48px;
 
     width: 71px;
     height: 87px;
 
-    background-image: url('../img/popular-3.svg');
+    background-image: url("../img/popular-3.svg");
     background-repeat: no-repeat;
 }
 
 .cotalog-fitBracelet .icon-container::before {
     position: absolute;
     content: "";
-    top: 25%;
-    left: 25%;
+    top: 50px;
+    left: 28px;
 
     width: 107px;
     height: 65px;
 
-    background-image: url('../img/popular-4.svg');
+    background-image: url("../img/popular-4.svg");
     background-repeat: no-repeat;
 }
 
 .cotalog-smartWatch .icon-container::before {
     position: absolute;
     content: "";
-    top: 25%;
-    left: 25%;
+    top: 32px;
+    left: 55px;
 
     width: 56px;
     height: 98px;
 
-    background-image: url('../img/popular-5.svg');
+    background-image: url("../img/popular-5.svg");
     background-repeat: no-repeat;
 }
 
 .cotalog-drons .icon-container::before {
     position: absolute;
     content: "";
-    top: 25%;
-    left: 25%;
+    top: 49px;
+    left: 12px;
 
     width: 132px;
     height: 69px;
 
-    background-image: url('../img/popular-6.svg');
+    background-image: url("../img/popular-6.svg");
     background-repeat: no-repeat;
 }
 
@@ -491,7 +913,7 @@ img {
 }
 
 .service-item p {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 30px;
@@ -559,7 +981,7 @@ img {
 }
 
 .info p {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 30px;
@@ -600,7 +1022,7 @@ img {
 }
 
 .breadcrumbs a {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 300;
     line-height: 24px;
@@ -622,35 +1044,48 @@ img {
     background-color: #efefef;
 }
 
+/*HZ*/
+
+.catalog-sorting-h3 {
+    display: flex;
+    justify-content:;
+    outline: 1px solid red;
+}
+
+.catalog-sorting-h3 .h3 {
+    display: flex;
+    justify-content: flex-end;
+    width: 28%;
+    background-color: #dbdbdb;
+}
+
+.catalog-sorting-h3 h3 {
+    width: 328px;
+}
+
+.catalog-sorting-h3 .catalog-sorting {
+    width: 72%;
+    background-color: #ebebeb;
+}
+
 /*filter-catalog*/
 
 .catalog-container {
     display: flex;
     justify-content: center;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+
+    outline: 1px solid green;
 }
 
 .filter-background {
     position: relative;
+
+    outline: 1px solid red;
 }
 
 .filter-catalog {
-    width: 328px;
-}
-
-.filter-catalog::before {
-    content: "";
-
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    width: 1000%;
-    height: 100%;
-
-    background-color: #efefef;
-
-    z-index: -2;
+    /* width: 328px; */
 }
 
 .filter-catalog h3,
@@ -670,33 +1105,9 @@ img {
 
 }
 
-.filter-catalog h3::before {
-    content: "";
+.h3-container {
+    background-color: #dbdbdb;
 
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    width: 1000%;
-    height: 100%;
-
-    background-color: #dcdcdc;
-
-    z-index: -1;
-}
-
-.catalog-sorting h3::before {
-    content: "";
-
-    position: absolute;
-    top: 0;
-    left: -72px;
-
-    width: 1000%;
-    height: 100%;
-
-    background-color: #ebebeb;
-    z-index: -1;
 }
 
 .range-filter input[type="text"] {
@@ -715,7 +1126,7 @@ img {
 }
 
 .filter-catalog label {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 300;
     line-height: 40px;
@@ -730,6 +1141,8 @@ img {
 
 .list-pagination-container {
     padding-left: 72px;
+
+    outline: 1px solid red;
 }
 
 .catalog-sorting {
@@ -747,7 +1160,7 @@ img {
 }
 
 .sorting-list a {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 300;
     line-height: 18px;
@@ -794,7 +1207,7 @@ img {
 }
 
 .popup-catalog-item {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 13px;
     font-weight: 300;
     line-height: 36px;
@@ -919,7 +1332,7 @@ img {
 
 .footer-top a,
 .contacts address {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 36px;
@@ -939,7 +1352,7 @@ img {
 }
 
 .contacts .tel {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
     line-height: 30px
@@ -959,7 +1372,7 @@ img {
 .popup-message input[type="text"]::-webkit-input-placeholder,
 .popup-message input[type="email"]::-webkit-input-placeholder,
 .popup-message textarea[placeholder] {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
@@ -968,7 +1381,7 @@ img {
 
 .popup-message input[type="text"]::-moz-placeholder,
 .popup-message input[type="email"]::-moz-placeholder {
-    font-family: 'opensans', "Arial", sans-serif;
+    font-family: "opensans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
