--- a/css/style.css
+++ b/css/style.css
@@ -81,13 +81,13 @@ img {
 
     display: block;
 
-    min-width: 200px;
+    min-width: 160px;
     height: 40px;
-    padding: 0 43px;
     padding-top: 8px;
     box-sizing: border-box;
 
     text-transform: uppercase;
+    text-align: center;
     line-height: 24px;
     letter-spacing: 0.2em;
     color: #000000;
@@ -270,6 +270,10 @@ img {
 
 .user-name {
     margin-right: 20px;
+}
+
+.authorization .user-authorization {
+    opacity: 0.3;
 }
 
 .main-menu .compare {
@@ -493,11 +497,14 @@ img {
 
 .slider {
     position: relative;
+
+    min-height: 550px;
+    margin-bottom: 77px;
 }
 
 .slides-button-list {
     position: absolute;
-    bottom: 162px;
+    top: 362px;
     right: 102px;
 
     display: flex;
@@ -523,7 +530,6 @@ img {
 
     padding: 0 20px;
     margin-top: -33px;
-    margin-bottom: 90px;
     box-sizing: border-box;
 
     list-style: none;
@@ -648,7 +654,7 @@ img {
     content: "";
 
     position: absolute;
-    bottom: 165px;
+    top: 365px;
     right: 132px;
 
     width: 5px;
@@ -662,7 +668,7 @@ img {
     content: "";
 
     position: absolute;
-    bottom: 165px;
+    top: 365px;
     right: 99px;
 
     width: 5px;
@@ -676,7 +682,7 @@ img {
     content: "";
 
     position: absolute;
-    bottom: 165px;
+    top: 365px;
     right: 65px;
 
     width: 5px;
@@ -734,13 +740,17 @@ img {
     padding-left: 44px;
     padding-right: 44px;
     margin-left: 5px;
-    margin-bottom: 71px;
+    margin-bottom: 48px;
 }
 
 .table-slider {
-    width: 460px;
+    width: 480px;
+}
 
-    outline: 1px solid red;
+.table-slider th:not(:last-child),
+.table-slider td:not(:last-child) {
+    padding-right: 35px;
+    padding-left: 4px;
 }
 
 .table-slider th {
@@ -756,6 +766,11 @@ img {
     line-height: 48px;
 }
 
+.slider-drons .table-slider {
+    width: 290px;
+}
+
+
 /*index-catalog*/
 
 .index-cotalog-list {
@@ -763,7 +778,7 @@ img {
     margin: 0;
     padding: 0;
     margin-left: -40px;
-    margin-bottom: 80px;
+    margin-bottom: 63px;
 
     list-style: none;
 }
@@ -874,45 +889,148 @@ img {
 }
 
 .icon-container:active::before,
-.index-cotalog-item a:active {
+.index-cotalog-item a:active p {
     opacity: 0.3;
 }
+
 
 /*servise*/
 
 .service-container {
     width: 100%;
+    min-height: 388px;
     margin-bottom: 95px;
 
     background-color: #e5e5e5;
+    background-image: linear-gradient(to bottom,
+        #ffffff 100px, #e5e5e5 100px );
 }
 
 .service {
     display: flex;
-}
-
-.service-item {
-    display: none;
+    justify-content: flex-start;
+    padding: 0;
+    padding-top: 70px;
 }
 
 .service-slider {
-    list-style: none;
-    width: 300px;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+    padding-top: 10px;
+    width: 320px;
     margin-right: 120px;
+
+    list-style: none;
 }
 
-.service-slider .service-active {
+.service-slider::after {
+    content: "";
+
+    position: absolute;
+    top: -70px;
+    right: -7px;
+
+    width: 7px;
+    height: 319px;
+
     background-color: #000000;
-    color: #f7e296;
+}
+
+.button-service {
+    margin-bottom: 25px;
+    padding: 0;
+}
+
+.button-service .button {
+    display: block;
+    width: 100px;
+    padding-left: 0;
+    padding-right: 0;
+
+    text-align: center;
+
+    z-index: 1;
+}
+
+.service-active {
+    background-color: #000000;
     opacity: 1;
 }
 
+.service-active a {
+    color: #f7e296;
+}
+
+.service-active a::before {
+    display: none;
+}
+
+.service-item {
+    position: relative;
+
+    display: none;
+    width: 880px;
+}
+
+.service-dilivety::after {
+    content: "";
+
+    position: absolute;
+    bottom: 26px;
+    right: 66px;
+
+    width: 136px;
+    height: 164px;
+
+    background-image: url("../img/delivery.svg");
+    background-repeat: no-repeat;
+}
+
+.service-warranty::after {
+    content: "";
+
+    position: absolute;
+    bottom: 20px;
+    right: 45px;
+
+    width: 171px;
+    height: 194px;
+
+    background-image: url("../img/warranty.svg");
+    background-repeat: no-repeat;
+}
+
+.service-credit::after {
+    content: "";
+
+    position: absolute;
+    bottom: 20px;
+    right: 55px;
+
+    width: 171px;
+    height: 194px;
+
+    background-image: url("../img/credit.svg");
+    background-repeat: no-repeat;
+}
+
 .service-item h3 {
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
+    padding-top: 3px;
+    padding-left: 4px;
+
     font-size: 47px;
     line-height: 48px;
+    letter-spacing: 0.01em;
 }
 
 .service-item p {
+    width: 440px;
+
     font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
@@ -927,14 +1045,13 @@ img {
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-    margin-left: -40px;
     margin-bottom: 93px;
-
+    margin-left: -40px;
     list-style: none;
 }
 
 .brands li {
-    margin-right: 40px;
+    margin-left: 40px;
 }
 
 .brands img {
@@ -968,19 +1085,40 @@ img {
 }
 
 .info section:first-child {
-    width: 480px;
+    width: 500px;
 }
 
 .info section {
+    position: relative;
     width: 560px;
 }
 
+.info section::before {
+    content: "";
+
+    position: absolute;
+    top: -7px;
+    left: 0;
+
+    width: 80px;
+    height: 7px;
+
+    background-color: #000000;
+}
+
 .info h3 {
+    margin: 0;
+    padding: 0;
+    margin-top: 45px;
+    margin-bottom: 43px;
     font-size: 47px;
     line-height: 48px;
 }
 
 .info p {
+    margin-bottom:30px;
+    padding-right: 5px;
+
     font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
@@ -988,13 +1126,49 @@ img {
     color: #464646;
 }
 
+.info-contacts p {
+    margin-bottom: 40px;
+}
+
 .delevery {
+    margin: 0;
+    padding: 0;
+
+    margin-top: 70px;
     list-style: none;
 }
 
 .delevery li {
+    position: relative;
+
+    padding-left: 35px;
+    margin-bottom: 10px;
+
     font-size: 16px;
     line-height: 30px;
+}
+
+.delevery li::before {
+    content: "";
+
+    position: absolute;
+    top: 12px;
+    left: 0;
+
+    width: 4px;
+    height: 4px;
+
+    border: 2px solid #e5e5e5;
+    border-radius: 50%;
+}
+
+.info .button {
+    width: 260px;
+    margin-top: 60px;
+}
+
+.info-contacts .button {
+    margin-top: 62px;
 }
 
 /*catalog*/
@@ -1040,56 +1214,20 @@ img {
     opacity: 0.1;
 }
 
-.background-cotalog {
-    background-color: #efefef;
-}
-
-/*HZ*/
-
-.catalog-sorting-h3 {
-    display: flex;
-    justify-content:;
-    outline: 1px solid red;
-}
-
-.catalog-sorting-h3 .h3 {
-    display: flex;
-    justify-content: flex-end;
-    width: 28%;
-    background-color: #dbdbdb;
-}
-
-.catalog-sorting-h3 h3 {
-    width: 328px;
-}
-
-.catalog-sorting-h3 .catalog-sorting {
-    width: 72%;
-    background-color: #ebebeb;
-}
-
-/*filter-catalog*/
+/*catalog+filter*/
 
 .catalog-container {
-    display: flex;
-    justify-content: center;
-    /* box-sizing: border-box; */
-
-    outline: 1px solid green;
+    overflow: hidden;
 }
 
 .filter-background {
-    width: 28%;
-
-    background-color: #efefef;
-
-    outline: 1px solid red;
+    display: flex;
+    justify-content: center;
 }
 
 .filter-catalog {
     display: flex;
-    justify-content: flex-end;
-    margin-left: auto;
+    flex-direction: column;
     width: 328px;
 }
 
@@ -1101,18 +1239,33 @@ img {
     padding: 0;
     min-height: 70px;
     padding-top: 25px;
-    margin-bottom: 70px;
 
     font-size: 16px;
     line-height: 24px;
     text-transform: uppercase;
     letter-spacing: 0.2em;
-
 }
 
-.h3-container {
-    background-color: #dbdbdb;
+.filter-catalog h3 {
+    position: relative;
 
+    margin-bottom: 70px;
+
+    background-color: #dbdbdb;
+}
+
+.filter-catalog h3::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    height: 100%;
+    width: 100vw;
+
+    background-color: #dbdbdb;
+    z-index: -1;
 }
 
 .range-filter input[type="text"] {
@@ -1146,16 +1299,32 @@ img {
 
 .list-pagination-container {
     box-sizing: border-box;
+    width: 832px;
     padding-left: 72px;
-    width: 72%;
-
-    outline: 1px solid red;
 }
 
 .catalog-sorting {
+    position: relative;
+
     display: flex;
+    margin-bottom: 70px;
 
     color: #000000;
+}
+
+.catalog-sorting::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    left: -72px;
+
+    width: 100vw;
+    height: 100%;
+
+    background-color: #ebebeb;
+
+    z-index: -1;
 }
 
 .catalog-sorting ul {
@@ -1192,7 +1361,6 @@ img {
     padding: 0;
     margin-left: -40px;
     margin-bottom: 40px;
-    width: 832px;
 
     list-style: none;
 }
@@ -1238,7 +1406,6 @@ img {
     display: flex;
     justify-content: space-between;
     margin-bottom: 72px;
-    width: 760px;
 
     background-color: #ebebeb;
 }
@@ -1291,7 +1458,7 @@ img {
     display: flex;
     flex-direction: column;
     min-height: 323px;
-    margin-top: 95px;
+    margin-top: 82px;
 }
 
 .footer-catalog {
@@ -1300,38 +1467,117 @@ img {
 
 .footer-top {
     padding-top: 65px;
-    margin-bottom: 40px;
+    margin-bottom: 17px;
     display: flex;
     justify-content: space-between;
 }
 
 .authorization-footer-container {
     display: flex;
+    justify-content: flex-end;
+    margin-top: -5px;
+}
+
+.authorization-footer-container div {
+    position: relative;
+
+    margin-left: 32px;
+    padding-left: 30px;
+}
+
+.authorization-footer {
+    margin: 0;
+}
+
+.authorization-footer a::before {
+    content: "";
+
+    position: absolute;
+    top: 12px;
+    left: 7px;
+
+    width: 13px;
+    height: 12px;
+
+    background-image: url("../img/user-footer.svg");
+    background-repeat: no-repeat;
+}
+
+.compare-footer::before {
+    content: "";
+
+    position: absolute;
+    top: 14px;
+    left: 13px;
+
+    width: 10px;
+    height: 10px;
+
+    background-image: url("../img/compare-footer.svg");
+    background-repeat: no-repeat;
+}
+
+.basket-footer::before {
+    content: "";
+
+    position: absolute;
+    top: 12px;
+    left: 11px;
+
+    width: 12px;
+    height: 12px;
+
+    background-image: url("../img/cart-footer.svg");
+    background-repeat: no-repeat;
 }
 
 .footer .contacts {
     display: flex;
-    justify-content: space-between;
     margin-bottom: 35px;
 }
 
 .footer .contacts-list {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    width: 425px;
     margin: 0;
     padding: 0;
-}
-
-.contacts-list li {
-    margin-right: 38px;
+    margin-left: 157px;
+    padding-top: 6px;
 }
 
 .footer .social {
+    position: relative;
+
     display: flex;
+    justify-content: flex-end;
+    margin-top: 28px;
+}
+
+.footer .social::after {
+    content: "";
+
+    position: absolute;
+    top: 15px;
+    left: 0;
+
+    width: 80px;
+    height: 7px;
+
+    background-color: #ffc600;
 }
 
 .social-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
+    margin-right: 483px;
+    padding-top: 2px;
+    width: 140px;
 }
 
 .footer li {
@@ -1349,7 +1595,34 @@ img {
     opacity: 0.7;
 }
 
+.social-list a {
+    display: block;
+    width: 32px;
+    height: 32px;
+
+    opacity: 0.3;
+}
+
+.social-facebook a {
+    background-image: url("../img/fb.svg");
+    background-repeat: no-repeat;
+}
+
+.social-instagram a {
+    background-image: url("../img/instagram.svg");
+    background-repeat: no-repeat;
+}
+
+.social-twitter a {
+    background-image: url("../img/twitter.svg");
+    background-repeat: no-repeat;
+}
+
 .contacts address {
+    font-family: "opensans", "Arial", sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 30px;
     font-style: normal;
 }
 
@@ -1360,10 +1633,15 @@ img {
 }
 
 .contacts .tel {
+    display: block;
+    margin-left: auto;
+
     font-family: "opensans", "Arial", sans-serif;
     font-size: 15px;
     font-weight: 300;
-    line-height: 30px
+    text-transform: none;
+    line-height: 30px;
+    letter-spacing: 0;
 }
 
 /*Popups*/
@@ -1408,6 +1686,10 @@ img {
 
 .popup-message input:invalid {
     background-color: #f6dada;
+}
+
+.popup-map {
+    display: none;
 }
 
 .block-show {
