--- a/css/style.css
+++ b/css/style.css
@@ -1174,25 +1174,45 @@ img {
 /*catalog*/
 
 .main-catalog h1 {
-    margin-top: 45px;
+    margin-top: 36px;
     padding-left: 60px;
     box-sizing: border-box;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 
     font-size: 47px;
     line-height: 48px;
+    letter-spacing: 0.01em;
 }
 
 .breadcrumbs {
     display: flex;
     box-sizing: border-box;
-    margin-bottom: 50px;
+    margin-top: 0;
+    padding: 0;
+    padding-left: 60px;
+
+    margin-bottom: 45px;
 
     list-style: none;
 }
 
 .breadcrumbs li {
-    padding-right: 20px;
+    position: relative;
+
+    padding-right: 35px;
+}
+
+.breadcrumbs li:not(:last-child)::after {
+    content: "";
+
+    position: absolute;
+    top: 9px;
+    right: 16px;
+
+    width: 4px;
+    height: 7px;
+
+    background-image: url("../img/nav-arrow.svg");
 }
 
 .breadcrumbs a {
@@ -1226,9 +1246,26 @@ img {
 }
 
 .filter-catalog {
+    position: relative;
+
     display: flex;
     flex-direction: column;
     width: 328px;
+}
+
+.filter-catalog::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 100vw;
+    height: 100%;
+
+    background-color: #eeeeee;
+
+    z-index: -1;
 }
 
 .filter-catalog h3,
